--- a/hexo/Dockerfile
+++ b/hexo/Dockerfile
@@ -7,14 +7,14 @@ RUN apk add --update --no-cache git openssh
 RUN npm install hexo-cli -g && \
     hexo init . && \
     npm install && \
-    rm -rf /hexo/source /hexo/themes /hexo/_config.yml && \
-    mkdir -p /mnt/source /mnt/themes /mnt/public && \
-    ln -s /mnt/source /hexo/source && \
-    ln -s /mnt/themes /hexo/themes && \
-    ln -s /mnt/public /hexo/public && \
-    ln -s /mnt/_config.yml /hexo/_config.yml && \
     rm -rf /var/cache/apk/* && \
     rm -rf /tmp/*
+
+RUN rm -rf /hexo/source /hexo/themes /hexo/_config.yml && \
+    mkdir -p /mnt/source /mnt/themes && \
+    ln -s /mnt/source /hexo/source && \
+    ln -s /mnt/themes /hexo/themes && \
+    ln -s /mnt/_config.yml /hexo/_config.yml
 
 RUN npm install --save hexo-renderer-jade && \
     npm install --save hexo-deployer-git && \
@@ -24,5 +24,6 @@ RUN npm install --save hexo-renderer-jade && \
 
 VOLUME ["/mnt","~/.ssh"]
 
-ENTRYPOINT ["hexo"]
-CMD ["g"]
+ADD entrypoint.sh entrypoint.sh
+RUN chmod +x entrypoint.sh
+ENTRYPOINT ["sh", "entrypoint.sh"]
